# python-customer-usecase-repo

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: main.yml
helloworld/: main.py
pipelineconfig/: Opsera_Pipeline_67f64609e56e5891bbef9e9c.json  Opsera_Pipeline_680b06f993bbbb1ad3c008d5.json  Opsera_Pipeline_68f8558078c299d4f6647a73.json
pipelineconfig/v1/: Opsera_Pipeline_680b06f993bbbb1ad3c008d5.json
src/: __init__.py
tests/: test_example.py
