[build-system]
requires = ["setuptools >= 62"]
build-backend = "setuptools.build_meta"

[project]
name = "helloworld"
dynamic = ["version"]
description = "The familiar example program in Python"
requires-python = ">= 3"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "A. Developer", email = "author@example.com" }
]
keywords = ["example", "documentation", "tutorial"]

[project.urls]
Homepage = "http://github.com/dbarnett/python-helloworld"
Repository = "http://github.com/dbarnett/python-helloworld"

[project.scripts]
helloworld_in_python = "helloworld.main:main"

[tool.poetry]
name = "python-customer-usecase-repo"
version = "0.1.0"
description = "Your project description"
authors = ["Pari <parinithareddy29.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
